<resources>
    <string name="app_name">Stepik</string>
    <string name="add">Добавить</string>
    <string name="amount">Сумма</string>
    <string name="reset_sort">Сбросить сортировку</string>
    <string name="sort_by">Сортировать по</string>
    <string name="sort_alphabet">Алфавиту</string>
    <string name="sort_price">Стоимости</string>
    <string name="close">Закрыть</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="delete_confirm">Вы уверены, что хотите удалить валюту?</string>
    <string name="flag">Выбрать флаг</string>
    <string name="translator">Переводчик</string>
    <string name="favorites">Избранное</string>
    <string name="converter">Конвертер</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="in_kzt">Кол. тенге в валюте</string>
    <string name="currency_name">Название валюты</string>
    <string name="def_name">Azat Serzhanov</string>
    <string name="def_email">azatserzhan@gmail.com</string>
    <string name="share">Поделиться</string>
    <string name="send_by_email">Отправить по почте</string>
    <string name="call">Позвонить</string>
    <string name="launch_camera">Запустить камеру</string>
</resources>