<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@+id/navigation_translator">

    <fragment
        android:id="@+id/navigation_translator"
        android:name="com.example.stepik.TranslatorFragment"
        android:label="@string/translator"
        tools:layout="@layout/fragment_translator" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.stepik.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_converter"
        android:name="com.example.stepik.ConverterFragment"
        android:label="Converter"
        tools:layout="@layout/fragment_converter" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.stepik.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.stepik.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>