<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="32dp"
    android:paddingBottom="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_currency_name"
            style="@style/ListItemTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_name"
            app:hintTextColor="@color/hint"
            tools:hint="Лира, Турция" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount"
            style="@style/ListItemTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/in_kzt"
            app:hintTextColor="@color/hint"
            tools:hint="50" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_bottom_sheet"
        android:padding="16dp"
        android:text="@string/flag"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/bg_btn_bottom_sheet"
        android:padding="16dp"
        android:text="@string/add"
        android:textColor="@color/white" />

</LinearLayout>